.metadata/.plugins/org.eclipse.cdt.ui/Projet_Robot_Infirmier_F407G.build.log
12:24:31 **** Incremental Build of configuration Debug for project Projet_Robot_Infirmier_F407G ****
make -j4 all 
arm-none-eabi-gcc "../Core/Src/lidar.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/lidar.d" -MT"Core/Src/lidar.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/lidar.o"
../Core/Src/lidar.c: In function 'lidar_setup':
../Core/Src/lidar.c:18:20: error: invalid initializer
   18 |  uint16_t Data[] = 0x20;
      |                    ^~~~
../Core/Src/lidar.c:19:21: error: 'huart3' undeclared (first use in this function)
   19 |  HAL_UART_Transmit(&huart3, &Data, sizeof(Data), 1000);
      |                     ^~~~~~
../Core/Src/lidar.c:19:21: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/lidar.c:19:20: warning: passing argument 1 of 'HAL_UART_Transmit' from incompatible pointer type [-Wincompatible-pointer-types]
   19 |  HAL_UART_Transmit(&huart3, &Data, sizeof(Data), 1000);
      |                    ^~~~~~~
      |                    |
      |                    uint16_t (*)[1] {aka short unsigned int (*)[1]}
In file included from ../Core/Inc/stm32f4xx_hal_conf.h:406,
                 from ../Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal.h:30,
                 from ../Core/Inc/main.h:31,
                 from ../Core/Inc/gpio.h:28,
                 from ../Core/Src/lidar.c:3:
../Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_uart.h:723:57: note: expected 'UART_HandleTypeDef *' {aka 'struct __UART_HandleTypeDef *'} but argument is of type 'uint16_t (*)[1]' {aka 'short unsigned int (*)[1]'}
  723 | HAL_StatusTypeDef HAL_UART_Transmit(UART_HandleTypeDef *huart, uint8_t *pData, uint16_t Size, uint32_t Timeout);
      |                                     ~~~~~~~~~~~~~~~~~~~~^~~~~
../Core/Src/lidar.c:19:29: warning: passing argument 2 of 'HAL_UART_Transmit' from incompatible pointer type [-Wincompatible-pointer-types]
   19 |  HAL_UART_Transmit(&huart3, &Data, sizeof(Data), 1000);
      |                             ^~~~~
      |                             |
      |                             uint16_t (*)[1] {aka short unsigned int (*)[1]}
In file included from ../Core/Inc/stm32f4xx_hal_conf.h:406,
                 from ../Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal.h:30,
                 from ../Core/Inc/main.h:31,
                 from ../Core/Inc/gpio.h:28,
                 from ../Core/Src/lidar.c:3:
../Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_uart.h:723:73: note: expected 'uint8_t *' {aka 'unsigned char *'} but argument is of type 'uint16_t (*)[1]' {aka 'short unsigned int (*)[1]'}
  723 | HAL_StatusTypeDef HAL_UART_Transmit(UART_HandleTypeDef *huart, uint8_t *pData, uint16_t Size, uint32_t Timeout);
      |                                                                ~~~~~~~~~^~~~~
make: *** [Core/Src/subdir.mk:43: Core/Src/lidar.o] Error 1
"make -j4 all" terminated with exit code 2. Build might be incomplete.

12:24:31 Build Failed. 3 errors, 2 warnings. (took 481ms)

